--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
-    "serverless-dynamodb-local": "^0.2.40"
+    "@types/uuid": "^9.0.1",
+    "serverless-dynamodb-local": "^0.2.40",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
