REFACTOR: Adicionado Reposiroty Pattern e Inverssão de depêndencias para criação de tasks

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,9 @@
     "paths": {
       "@functions/*": ["src/functions/*"],
       "@libs/*": ["src/libs/*"],
-      "@connection/*":["./src/connection/*"]
+      "@connection/*":["./src/connection/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@tasks/*": ["./src/modules/tasks/*"]
     }
   }
 }
