--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
     "@types/uuid": "^9.0.1",
+    "reflect-metadata": "^0.1.13",
     "serverless-dynamodb-local": "^0.2.40",
+    "tsyringe": "^4.7.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
